# smart-mirror-ir

./: .gitignore  LICENSE  README.md  install.sh  pyproject.toml  requirements.txt
smart_mirror_ir/: __init__.py  cli.py  config.py  detector.py  mirror_manager.py  utils.py  validators.py
smart_mirror_ir/data/: mirrors_cn.json  mirrors_ir.json
systemd/: smart-mirror-ir.service  smart-mirror-ir.timer
